<resources>
    <string name="app_name">Compens</string>
    <string name="login_text">LOG IN</string>
    <string name="register_text">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="login_desc">Please enter your account and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_have_read_and_agree_to_the_terms_and_conditions">I have read and agree to the terms and conditions</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="prediction">Salary Prediction</string>
    <string name="age">Age</string>
    <string name="work_experience">Work Experience (Year)</string>
    <string name="education_level">Education Level</string>
    <string name="job_title">Job Title</string>
    <string name="generate">GENERATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Company: X</string>
    <string name="add_employee">Add Employee</string>
    <string name="employee_salary">Employee Salary Database</string>
    <string name="delete">Delete</string>
    <string name="generate_act">Generate</string>
    <string name="generate_prediction">Generate Salary Prediction</string>
    <string name="logout">Logout</string>
</resources>