<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_generate"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.ListEmployeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="35sp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_company_name"
                app:layout_constraintBottom_toBottomOf="@id/tv_company_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="32dp"
                android:backgroundTint="@color/cv_background"
                app:layout_constraintTop_toBottomOf="@id/btn_logout"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_salary_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/employee_salary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:gravity="end">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_add_employe"
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:backgroundTint="#DFF2EB"
                            android:text="@string/add_employee"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:layout_gravity="end"
                            app:cornerRadius="4dp"
                            app:iconPadding="0dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:layout_marginStart="8dp"
                            android:backgroundTint="#DFF2EB"
                            android:text="@string/delete"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:layout_gravity="end"
                            app:cornerRadius="4dp"
                            app:iconPadding="0dp" />


                    </LinearLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/tv_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/tv_name"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Name"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toEndOf="@id/tv_number"
                            app:layout_constraintEnd_toStartOf="@id/tv_gender"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/tv_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Gender"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toEndOf="@id/tv_name"
                            app:layout_constraintEnd_toStartOf="@id/tv_age"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/tv_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Age"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toEndOf="@id/tv_gender"
                            app:layout_constraintEnd_toStartOf="@id/tv_salary"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <TextView
                            android:id="@+id/tv_salary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Salary"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toEndOf="@id/tv_age"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_employee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:listitem="@layout/item_employee"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>